--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
+
+    <script type="text/javascript"
+  async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
   </head>
   <body>
     {% include navigation.html %}
     {{ content }}
   </body>
+
 </html>
